<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />
    <RelativeLayout
        android:id="@+id/rl_informationContainer"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:orientation="vertical">

        <LinearLayout
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="96dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/ic_name"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
                <TextView
                    android:id="@+id/tv_phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="2343224234"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/ic_name"
                    android:layout_marginRight="8dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="New York"/>
            </LinearLayout>
        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            app:civ_border_color="@android:color/transparent" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/tv_requestId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBrown"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:text="Request ID-34243"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/btn_cancelRequest"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/tv_requestId"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:background="@drawable/shape_rect_f_white_s_black"
            android:text="@string/btn_cancel_reqeust"
            android:textColor="#404040" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/btn_cancelRequest"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btn_arrived"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@color/colorPrimary"
                android:text="@string/btn_i_have_arrived"
                android:textColor="@android:color/white" />
            <TextView
                android:visibility="gone"
                android:id="@+id/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@color/colorPrimary"
                android:text="@string/btn_finish"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>